PRODEV-1566. Fix scroll jumping

--- a/src/components/RideTo/Account/DashboardPageV2/News/styles.scss
+++ b/src/components/RideTo/Account/DashboardPageV2/News/styles.scss
@@ -47,6 +47,10 @@
   }
 }
 
+.results {
+  min-height: 100vh;
+}
+
 .list {
   padding: 0;
   margin-bottom: 0;
